[package]
name = "desktop_perf_tester"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "^0.15"
sysinfo = "^0.38"
chrono = "^0.4"
plotters = "^0.3"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
anyhow = "^1.0"
thiserror = "^2.0"

[dev-dependencies]
criterion = "^0.8"
